# Text-to-Polygon-Pipeline

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
docs/: heuristic-baseline.md  pipeline-flowchart.excalidraw  wcs-verification.md  wms-display-verification.md
docs/planning/specs/: 2026-04-22-text-to-polygon-design.md
docs/superpowers/plans/: 2026-04-24-text-to-polygon-implementation.md
docs/superpowers/specs/: 2026-04-22-text-to-polygon-design.md
ki_geodaten/: __init__.py  config.py  geospatial_env.py  models.py
ki_geodaten/app/: main.py  run_metadata.py  serialization.py
ki_geodaten/app/routes/: geojson.py  jobs.py  system.py
ki_geodaten/app/static/: app.css  app.js
ki_geodaten/app/templates/: index.html
ki_geodaten/jobs/: json_utils.py  retention.py  store.py
ki_geodaten/pipeline/: dem_client.py  dop_client.py  exporter.py  geo_utils.py  heuristic_baseline.py  merger.py  modality_filter.py  segmenter.py  tiler.py  vector_cleanup.py  vector_topology.py
ki_geodaten/worker/: health.py  loop.py  orchestrator.py
scripts/: run-server.sh  run-worker.sh  run_ab_experiment.py  run_heuristic_baseline.py
tests/: conftest.py  test_config.py  test_end_to_end.py  test_geospatial_env.py  test_models.py
tests/app/: test_main.py  test_routes_jobs.py  test_serialization.py  test_system_health.py
tests/jobs/: test_retention.py  test_store.py
tests/pipeline/: test_dem_client.py  test_dop_client.py  test_exporter.py  test_geo_utils.py  test_heuristic_baseline.py  test_merger.py  test_modality_filter.py  test_sam3_adapter_smoke.py  test_segmenter.py  test_tiler.py  test_vector_cleanup.py  test_vector_topology.py
tests/worker/: test_loop.py  test_orchestrator.py
